[metadata]
name = saxpy
version=1.0.2
author = Pavel Senin
author-email = seninp@gmail.org
summary = SAX, HOTSAX, EMMA implementations for Python
license = GPL2
description-file = README.rst
home-page = https://github.com/cdchushig/saxpy.git
requires-python = >=3.8
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages = saxpy
